gitops/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: frontend
        image: frontend:local
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1"
            memory: "200Mi"
          limits:
            cpu: "3"
            memory: "900Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app-frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
