gitops/manifests/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: app-backend
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local.test
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
